# scribus-plugin-tableofcontents

./: README.md
resources/mockups/: table-of-contents-minimal.epz
src/: CMakeLists.txt  plugin.cpp  plugin.h  tableofcontents.cpp  tableofcontents.h  tableofcontentsplugin.cpp  tableofcontentsplugin.h
src/ui/: settings.cpp  settings.h  settings.ui
