INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

#SET(SCRIBUS_TABLEOFCONTENTS_PLUGIN_UI_SRC
  #ui/tableofconents.ui
#)

SET(SCRIBUS_TABLEOFCONTENTS_PLUGIN_MOC_CLASSES
  plugin.h
  # tableofcontents.h
)

SET(SCRIBUS_TABLEOFCONTENTS_PLUGIN_SOURCES
  plugin.cpp
  tableofcontents.cpp
)

SET(SCRIBUS_TABLEOFCONTENTS_PLUGIN "tableofcontentsplugin")

QT5_WRAP_CPP(SCRIBUS_TABLEOFCONTENTS_PLUGIN_MOC_SOURCES ${SCRIBUS_TABLEOFCONTENTS_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_TABLEOFCONTENTS_PLUGIN} MODULE ${SCRIBUS_TABLEOFCONTENTS_PLUGIN_SOURCES} ${SCRIBUS_TABLEOFCONTENTS_PLUGIN_MOC_SOURCES} ${SCRIBUS_TABLEOFCONTENTS_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_TABLEOFCONTENTS_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_TABLEOFCONTENTS_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_TABLEOFCONTENTS_PLUGIN} ${SCRIBUS_SCRIBUSAPI_PLUGIN} ${EXE_NAME})

